--- a/brisca/app/Resources/views/includes/chat.html.twig
+++ b/brisca/app/Resources/views/includes/chat.html.twig
@@ -1,5 +1,11 @@
-{#include scripts in base scripts#}
-<ul id="messages"></ul>
-<form id="chat">
-    <input id="m" autocomplete="off" /><button>Send</button>
-</form>
+<div id="chat-box">
+    <ul id="messages"></ul>
+    <form id="chat">
+        <div class="margin-bottom-none center">
+            <input id="m" type="text" autocomplete="off" placeholder="Mensaje" class="margin-bottom-none margin-right-m">
+            <button class="btn-floating">
+                <i class="material-icons">send</i>
+            </button>
+        </div>
+    </form>
+</div>
