--- a/brisca/app/Resources/views/base.html.twig
+++ b/brisca/app/Resources/views/base.html.twig
@@ -1,5 +1,6 @@
 {% set user = app.user %}
 {% set title = 'Brisca Online' %}
+{% set currentPath = path(app.request.attributes.get('_route'), app.request.attributes.get('_route_params')) %}
 <!doctype html>
 <html lang="es">
 <head>
@@ -10,8 +11,11 @@
 
     {% block stylesheets %}
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         {#<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">#}
-        <link rel="stylesheet" href="{{ asset('css/main.scss') }}">
+        <link rel="stylesheet" href="{{ asset('css/materialize-0.97.6.css') }}">
+
+        <link rel="stylesheet" href="{{ asset('css/main.css') }}">
     {% endblock %}
 </head>
 <body>
@@ -23,18 +27,18 @@
     {#<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>#}
 
     {#<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>#}
+    <script src="{{ asset('js/lib/materialize-0.97.6.js') }}"></script>
 
     {% if user %}
     <script src="{{ asset('js/lib/socket.io-1.4.5.js') }}"></script>
     {#<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>#}
 
     <script>
-        var name    = '{{ user.nick }}',
-                socket  = io('http://localhost:3000');
+        var name = '{{ user.nick }}',
+            socket = io('http://localhost:3000');
     </script>
 
     <script src="{{ asset('js/chat.js') }}"></script>
-    <script src="{{ asset('js/game.js') }}"></script>
 
     {% endif %}
 {% endblock %}
