--- a/brisca/web/css/game.scss
+++ b/brisca/web/css/game.scss
@@ -15,6 +15,8 @@
 }
 
 .card {
+  background-repeat: no-repeat;
+  background-color: white;
   width: 100px;
   height: 150px;
   background-size: 100% 100%;
