--- a/brisca/app/Resources/views/layout.html.twig
+++ b/brisca/app/Resources/views/layout.html.twig
@@ -9,7 +9,7 @@
         </ul>
 
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper container">
                 <a href="{{ path('homepage') }}" class="brand-logo left">
                     <span class="hide-on-med-and-up">Brisca</span>
                     <span class="hide-on-small-only">{{ title }}</span>
