--- a/brisca/app/Resources/views/User/perfil.html.twig
+++ b/brisca/app/Resources/views/User/perfil.html.twig
@@ -1,12 +1,83 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    {{ form_start(form) }}
 
-    {{ form_widget(form) }}
-    {#{{ form_row(form.plainPassword.first) }}#}
-    {#{{ form_row(form.plainPassword.second) }}#}
 
-    <button type="submit">Guardar cambios</button>
-    {{ form_end(form) }}
+    <div class="container">
+        <div class="row">
+            <div class="col s12 m8 offset-m2 l6 offset-l3 margin-bottom-l margin-top-l">
+                {{ form_start(form) }}
+
+                <p class="center">PERFIL</p>
+
+                {% set errors = form_errors(form) %}
+                {% if errors %}
+                    <div class="red lighten-4 red-text text-darken-2 paddings-m errors-container margin-bottom-m">
+                        {{ errors|raw }}
+                    </div>
+                {% endif %}
+
+                {{ form_label(form.email, null, {'label': 'Email'}) }}
+                {{ form_widget(form.email, {'attr': {'placeholder': 'Email'}}) }}
+                {% set errors = form_errors(form.email) %}
+                {% if errors %}
+                    <div class="red lighten-4 red-text text-darken-2 paddings-m errors-container margin-bottom-m">
+                        {{ errors|raw }}
+                    </div>
+                {% endif %}
+
+                {{ form_label(form.nick, null, {'label': 'Nombre de usuario'}) }}
+                {{ form_widget(form.nick, {'attr': {'placeholder': 'Nombre de usuario'}}) }}
+                {% set errors = form_errors(form.nick) %}
+                {% if errors %}
+                    <div class="red lighten-4 red-text text-darken-2 paddings-m errors-container margin-bottom-m">
+                        {{ errors|raw }}
+                    </div>
+                {% endif %}
+
+                {{ form_label(form.plainPassword.first) }}
+                {{ form_widget(form.plainPassword.first, {'attr': {'placeholder': 'Contraseña'}}) }}
+                {% set errors = form_errors(form.plainPassword.first) %}
+                {% if errors %}
+                    <div class="red lighten-4 red-text text-darken-2 paddings-m errors-container margin-bottom-m">
+                        {{ errors|raw }}
+                    </div>
+                {% endif %}
+
+                {{ form_label(form.plainPassword.second) }}
+                {{ form_widget(form.plainPassword.second, {'attr': {'placeholder': 'Confirmar contraseña'}}) }}
+                {% set errors = form_errors(form.plainPassword.second) %}
+                {% if errors %}
+                    <div class="red lighten-4 red-text text-darken-2 paddings-m errors-container margin-bottom-m">
+                        {{ errors|raw }}
+                    </div>
+                {% endif %}
+
+
+                <div class="file-field input-field">
+                    <div class="btn btn-small">
+                        <span>Imagen de perfil</span>
+                        {{ form_widget(form.img, {'attr': {'placeholder': 'Imagen de perfil'}}) }}
+                    </div>
+                    <div class="file-path-wrapper">
+                        <input class="file-path validate" type="text">
+                    </div>
+                </div>
+                {% set errors = form_errors(form.img) %}
+                {% if errors %}
+                    <div class="red lighten-4 red-text text-darken-2 paddings-m errors-container margin-bottom-m">
+                        {{ errors|raw }}
+                    </div>
+                {% endif %}
+
+                <div class="right">
+                    <button class="btn waves-effect waves-light btn-small" type="submit">
+                        Guardar cambios
+                        <i class="material-icons right">done_all</i>
+                    </button>
+                </div>
+                {{ form_end(form) }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
