--- a/brisca/app/Resources/views/includes/chat.html.twig
+++ b/brisca/app/Resources/views/includes/chat.html.twig
@@ -1,12 +1,33 @@
 {# TODO general y de partida#}
-<div id="chat-box">
-    <ul id="messages"></ul>
-    <form id="chat">
-        <div class="margin-bottom-none center">
-            <input id="m" type="text" autocomplete="off" placeholder="Mensaje" class="margin-bottom-none margin-right-m">
-            <button class="btn-floating">
-                <i class="material-icons">send</i>
-            </button>
-        </div>
-    </form>
+{#chat normal#}
+<div class="chat-box">
+    <div class="col s12">
+        <ul id="tabs" class="tabs">
+            <li id="tab-chat-general" class="tab"><a class="active" href="#c-general">General</a></li>
+            <li id="tab-chat-game" class="tab"><a href="#c-game">Partida</a></li>
+        </ul>
+    </div>
+    <div id="c-general" class="msgs-container col s12">
+        <ul class="messages msgs"></ul>
+        <form id="chat" class="chat">
+            <div class="margin-bottom-none center">
+                <input id="m" type="text" autocomplete="off" placeholder="Mensaje" class="margin-bottom-none margin-right-m">
+                <button class="btn-floating" type="submit">
+                    <i class="material-icons">send</i>
+                </button>
+            </div>
+        </form>
+    </div>
+
+    <div id="c-game" class="msgs-container col s12">
+        <ul class="messages msgs-game"></ul>
+        <form id="chat-game" class="chat">
+            <div class="margin-bottom-none center">
+                <input id="m-game" type="text" autocomplete="off" placeholder="Mensaje" class="margin-bottom-none margin-right-m">
+                <button class="btn-floating" type="submit">
+                    <i class="material-icons">send</i>
+                </button>
+            </div>
+        </form>
+    </div>
 </div>
