--- a/brisca/web/css/main.scss
+++ b/brisca/web/css/main.scss
@@ -13,35 +13,40 @@ body, html {
   height: 330px;
 }
 
-#chat-box {
+.chat-box {
   width: 100%;
   height: 100%;
   position: relative;
   padding: 20px 5% 70px 5%;
 
-  #messages {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;;
-  }
+  .msgs-container {
 
-  #chat {
-    position: absolute;
-    bottom: 15px;
-    width: 90%;
+    padding-top: 10px;
+    height: 85%;
 
-    input#m {
-      width: 75%;
+    .messages {
+      word-wrap: break-word;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+      overflow-y: scroll;;
     }
 
-    button {
+    .chat {
+      position: absolute;
+      bottom: 15px;
+      width: 90%;
 
+      input {
+        width: 70%;
+      }
+
+      button {
+
+      }
     }
   }
 }
-
-
 
 .user-img {
   width: 50px;
@@ -98,6 +103,28 @@ footer.page-footer {
 .btn-small {
   padding: 0 1rem !important;
   font-size: 0.9em !important;
+}
+
+.blink {
+  animation: blinkColor 3s linear infinite;
+}
+
+@keyframes blinkColor {
+  0% {
+    color: inherit;
+  }
+
+  50% {
+    color: red;
+  }
+
+  //60% {
+  //  color: red;
+  //}
+
+  100% {
+    color: inherit;
+  }
 }
 
 // entre móvil y tablet
