Estilo y dimensiones de chat. Cronómetro. Mejora en la distribución visual del juego.

--- a/brisca/app/Resources/views/includes/chat.html.twig
+++ b/brisca/app/Resources/views/includes/chat.html.twig
@@ -1,13 +1,13 @@
 {# TODO general y de partida#}
 {#chat normal#}
 <div class="chat-box">
-    <div class="col s12">
+    <div class="">
         <ul id="tabs" class="tabs">
             <li id="tab-chat-general" class="tab"><a class="active" href="#c-general">General</a></li>
             <li id="tab-chat-game" class="tab"><a href="#c-game">Partida</a></li>
         </ul>
     </div>
-    <div id="c-general" class="msgs-container col s12">
+    <div id="c-general" class="msgs-container ">
         <ul class="messages msgs"></ul>
         <form id="chat" class="chat">
             <div class="margin-bottom-none center">
@@ -19,7 +19,7 @@
         </form>
     </div>
 
-    <div id="c-game" class="msgs-container col s12">
+    <div id="c-game" class="msgs-container ">
         <ul class="messages msgs-game"></ul>
         <form id="chat-game" class="chat">
             <div class="margin-bottom-none center">
