--- a/brisca/web/css/game3.scss
+++ b/brisca/web/css/game3.scss
@@ -5,7 +5,7 @@ $cardHeight: 84;
 
 #game-container{
   margin-top: -10px;
-  background: greenyellow;
+  background: green;
   position: relative;
   padding: 10px 0;
   #over-game {
@@ -37,9 +37,11 @@ $cardHeight: 84;
 
 .playerImg {
   position: absolute;
+  background-color: white;
   width: 95px;
   height: 95px;
-  border: 3px solid black;
+  border: 5px solid black;
+  border-radius: 10px;
   left: 2px;
 }
 
@@ -52,7 +54,21 @@ $cardHeight: 84;
 }
 
 .turn {
-  border-color: yellow;
+  animation: blinkTurn 2s linear infinite;
+}
+
+@keyframes blinkTurn {
+  0% {
+    border-color: black;
+  }
+
+  50% {
+    border-color: rgb(226,186,120);
+  }
+
+  100% {
+    border-color: black;
+  }
 }
 
 .game-card {
@@ -68,11 +84,53 @@ $cardHeight: 84;
   vertical-align: top;
 }
 
-.deck {
+.chrono {
+  width: 66px;
+  text-align: center;
+  font-size: 3em;
+  font-weight: bold;
+  font-family: 'Rye', cursive;
+  position: absolute;
+  left: ( 12 + $cardWidth / 4 ) + px;
+  top: ( $height / 2 - 110) + px;
+}
+
+#chrono {
+  color: gold;
+  background: -webkit-linear-gradient(transparent, transparent),
+  -webkit-linear-gradient(top, rgba(213,173,109,1) 0%, rgba(213,173,109,1) 26%, rgba(226,186,120,1) 35%, rgba(163,126,67,1) 45%, rgba(145,112,59,1) 61%, rgba(213,173,109,1) 100%);
+  background: -o-linear-gradient(transparent, transparent);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+#chrono-shadow {
+  color: transparent;
+  text-shadow: 3px 3px 3px black;
+}
+
+#deck {
   position: absolute;
   left: ( 20 + $cardWidth / 4 ) + px;
-  top: ( $height / 2 - $cardWidth ) + px;
+  top: ( $height / 2 - 40) + px;
   transform: rotate(90deg);
+  box-shadow: 10px -6px 18px black;
+}
+
+#num {
+  font-size: 2em;
+  font-family: 'Rye', cursive;
+  position: absolute;
+  top: 222px;
+  width: 68px;
+  left: 29px;
+  text-align: center;
+}
+
+#sample {
+  position: absolute;
+  left: ( 20 + $cardWidth / 4 ) + px;
+  top: ( $height / 2 + 15 ) + px;
 }
 
 .player-cards{
@@ -105,12 +163,6 @@ $cardHeight: 84;
 #oponnent-play {
   left: ( 104 + 8 + $cardWidth ) + px;
   top: ( $cardHeight + 20 * 2 ) + px;
-}
-
-#sample {
-  position: absolute;
-  left: ( 20 + $cardWidth / 4 ) + px;
-  top: ( $height / 2 ) + px;
 }
 
 .semi-transparent {
