Notificaciones visuales en el juego

--- a/brisca/app/Resources/views/base.html.twig
+++ b/brisca/app/Resources/views/base.html.twig
@@ -35,6 +35,7 @@
 
     <script>
         var name = '{{ user.nick }}',
+            img = '{{ user.imgPath }}',
             socket = io('http://localhost:3000');
     </script>
 
