--- a/brisca/web/css/game3.scss
+++ b/brisca/web/css/game3.scss
@@ -43,6 +43,12 @@ $cardHeight: 84;
   border: 5px solid black;
   border-radius: 10px;
   left: 2px;
+  overflow: hidden;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 #oponnentImg {
@@ -71,6 +77,16 @@ $cardHeight: 84;
   }
 }
 
+.user-name {
+  color: white;
+  background-color: rgba(0,0,0,0.7);
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 0 2px;
+}
+
 .game-card {
   background-repeat: no-repeat;
   background-color: white;
@@ -91,7 +107,7 @@ $cardHeight: 84;
   font-weight: bold;
   font-family: 'Rye', cursive;
   position: absolute;
-  left: ( 12 + $cardWidth / 4 ) + px;
+  left: ( 14 + $cardWidth / 4 ) + px;
   top: ( $height / 2 - 110) + px;
 }
 
@@ -112,7 +128,7 @@ $cardHeight: 84;
 #deck {
   position: absolute;
   left: ( 20 + $cardWidth / 4 ) + px;
-  top: ( $height / 2 - 40) + px;
+  top: ( $height / 2 + 15 ) + px;
   transform: rotate(90deg);
   box-shadow: 10px -6px 18px black;
 }
@@ -121,7 +137,7 @@ $cardHeight: 84;
   font-size: 2em;
   font-family: 'Rye', cursive;
   position: absolute;
-  top: 222px;
+  top: 277px;
   width: 68px;
   left: 29px;
   text-align: center;
@@ -130,7 +146,7 @@ $cardHeight: 84;
 #sample {
   position: absolute;
   left: ( 20 + $cardWidth / 4 ) + px;
-  top: ( $height / 2 + 15 ) + px;
+  top: ( $height / 2 - 40) + px;
 }
 
 .player-cards{
@@ -165,6 +181,22 @@ $cardHeight: 84;
   top: ( $cardHeight + 20 * 2 ) + px;
 }
 
+#my-over {
+  left: ( 104 + 8 + $cardWidth ) + px;
+  top: ( $height - $cardHeight * 2 - 20 * 2 ) + px;
+  width: $cardWidth + px;
+  height: $cardHeight + px;
+  border-radius: 5px;
+}
+
+#oponnent-over {
+  left: ( 104 + 8 + $cardWidth ) + px;
+  top: ( $cardHeight + 20 * 2 ) + px;
+  width: $cardWidth + px;
+  height: $cardHeight + px;
+  border-radius: 5px;
+}
+
 .semi-transparent {
   opacity: 0.6;
 }
@@ -176,6 +208,45 @@ $cardHeight: 84;
 
 #modal1 .modal-content{
   height: 400px;
+}
+
+#game-alert {
+  background-color: white;
+  position: absolute;
+  z-index: 1000;
+  margin-left: 20px;
+  top: $height / 2 - 30 + px;
+  text-align: center;
+  font-family: 'Rye', cursive;
+  font-size: 1.5em;
+  box-shadow: 5px 5px 10px black;
+  //display: none;
+  transform: rotateX(90deg) scale(0);
+  width: $width - 40 + px;
+  p {
+    margin: 10px;
+  }
+}
+
+#game-alert.doAnim {
+  animation: alert-anim 1s linear forwards;
+}
+
+@keyframes alert-anim {
+  100% {
+    transform: rotateX(360deg) scale(1);
+  }
+}
+
+
+.result-img {
+  text-align: center;
+
+  img {
+    display: none;
+    height: 250px;
+    width: auto;
+  }
 }
 
 // entre móvil y tablet
