--- a/brisca/app/Resources/views/base.html.twig
+++ b/brisca/app/Resources/views/base.html.twig
@@ -40,6 +40,7 @@
     </script>
 
     <script src="{{ asset('js/chat.js') }}"></script>
+    <script src="{{ asset('js/base.js') }}"></script>
 
     {% endif %}
 {% endblock %}
