--- a/brisca/app/Resources/views/layout.html.twig
+++ b/brisca/app/Resources/views/layout.html.twig
@@ -1,6 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
+    <div id="load-layer" class="valign-wrapper">
+        <div class="preloader-wrapper big active valign">
+            <div class="spinner-layer spinner-blue-only">
+                <div class="circle-clipper left">
+                    <div class="circle"></div>
+                </div><div class="gap-patch">
+                    <div class="circle"></div>
+                </div><div class="circle-clipper right">
+                    <div class="circle"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% block header %}
 
         <ul id="dropdown1" class="dropdown-content">
