--- a/brisca/web/css/main.scss
+++ b/brisca/web/css/main.scss
@@ -2,6 +2,20 @@ body, html {
   min-width: 320px;
 }
 
+#load-layer {
+  position: fixed;
+  z-index: 1100;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+
+  &> div {
+    //width: 80%;
+    margin: 0 auto;
+    //max-width: 350px;
+  }
+}
+
 #modal1, #chat-container, #index-chat-container {
   background-color: greenyellow;
 }
