Efectos visuales. Voltear carta. Notificaciones con toast.

--- a/brisca/app/Resources/views/Page/index.html.twig
+++ b/brisca/app/Resources/views/Page/index.html.twig
@@ -53,6 +53,8 @@
                             is redirected to on success (more details below)
                             <input type="hidden" name="_target_path" value="/account" />
                         #}
+                        <input type="hidden" name="_target_path" value="/jugar" />
+
                         <div class="card-action">
                             <button class="btn waves-effect waves-light margin-right-l" type="submit">
                                 Entrar
