--- a/brisca/web/css/game3.scss
+++ b/brisca/web/css/game3.scss
@@ -100,6 +100,13 @@ $cardHeight: 84;
   background-origin: content-box;
   display: inline-block;
   vertical-align: top;
+  //animation: 3s halfRotate linear forwards;
+}
+
+@keyframes halfRotate {
+  100% {
+    transform: rotateY(90deg);
+  }
 }
 
 #my-cards .game-card:hover {
