--- a/brisca/web/css/main.scss
+++ b/brisca/web/css/main.scss
@@ -9,7 +9,7 @@ body, html {
   height: 100%;
   background-color: red;
 
-  &> div {
+  & > div {
     //width: 80%;
     margin: 0 auto;
     //max-width: 350px;
@@ -159,23 +159,42 @@ footer.page-footer {
   }
 }
 
-// entre móvil y tablet
-@media (min-width: 600px) {
+@media only screen and (max-width: 600px) {
+  #toast-container {
+    top: 10%;
+    bottom: inherit;
+  }
+}
+
+@media only screen and (max-width: 992px) and (min-width: 601px) {
   .container-in-slider {
     position: absolute;
     z-index: 100;
     width: 60%;
     margin: 2em 20%;
   }
+
+  #toast-container {
+    top: 10%;
+    bottom: inherit;
+  }
 }
 
 // mayor que tablet
-@media (min-width: 992px) {
+@media (min-width: 993px) {
   .container-in-slider {
     position: absolute;
     z-index: 100;
     width: 44%;
     margin: 2em 28%;
+  }
+
+  #toast-container {
+    left: 7% !important;
+    right: inherit;
+    .toast {
+      float: left;
+    }
   }
 }
 
